@@ -5,6 +5,9 @@ Revision history for RT-Extension-LDAPImport
        Consequently, the mapping in your config has changed, it now
        goes RT Field => LDAP Field.  See the readme and the POD
        for import_user for more information
+
+       Added support for adding all new users to a single group
+       on Import
 0.01  Thu Jun  7 13:35:41 2007
        Initial release.
 
